src/components/container/container.module.scss
@use "../../scss/variables/breakpoints.scss" as breakpoints;
@use "../../scss/mixins/caret.scss" as caret;
@use "../../scss/variables/spacing.scss" as spacing;

$sidebarwidth: 20em;
$transition: width 0.5s ease;

.mapWrapper {
    flex-grow: 1;
    position: relative;
    justify-content: center;
    display: flex;
    overflow: hidden;
}
.instructionsOverlay {
    position: absolute;
    z-index: 999;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    width: 100%;
    display: flex;
    justify-content: center;
}
.sidebarWrapper {
    width: 100%;
}

